# poloka-daophot

./: INSTALL  Makefile.am  README  configure.ac  poloka-dao.pc.in
poloka/: Makefile.am  daophotio.cc  daophotio.h  daostar.cc  daostar.h
tools/: Makefile.am  pka-imdaosetup.cc  pka-listdaoaddstar.cc  pka-listdaoconvert.cc
